@@ -6,7 +6,7 @@ ENV_CROSS_COMPILE:=$(CROSS_COMPILE)
 VERSION = 1
 PATCHLEVEL = 4
 SUBLEVEL = 15
-EXTRAVERSION =
+EXTRAVERSION =a
 #NAME=Zonked Quokka
 
 # *DOCUMENTATION*
