@@ -43,25 +43,25 @@
 
 #if CONFIG_SDRAM_BANK_LENGTH == (32*1024*1024)
 # if defined CONFIG_SDRAM_BANK1
-#  define SDR_CONFIG_CHIPS	SDR_CONFIG_4x8Mx16;
+#  define SDR_CONFIG_CHIPS	SDR_CONFIG_4x8Mx16
 # else
-#  define SDR_CONFIG_CHIPS	SDR_CONFIG_2x8Mx16;
+#  define SDR_CONFIG_CHIPS	SDR_CONFIG_2x8Mx16
 # endif
 #endif
 
 #if CONFIG_SDRAM_BANK_LENGTH == (64*1024*1024)
 # if defined CONFIG_SDRAM_BANK1
-#  define SDR_CONFIG_CHIPS	SDR_CONFIG_4x16Mx16;
+#  define SDR_CONFIG_CHIPS	SDR_CONFIG_4x16Mx16
 # else
-#  define SDR_CONFIG_CHIPS	SDR_CONFIG_2x16Mx16;
+#  define SDR_CONFIG_CHIPS	SDR_CONFIG_2x16Mx16
 # endif
 #endif
 
 #if CONFIG_SDRAM_BANK_LENGTH == (128*1024*1024)
 # if defined CONFIG_SDRAM_BANK1
-#  define SDR_CONFIG_CHIPS	SDR_CONFIG_4x32Mx16;
+#  define SDR_CONFIG_CHIPS	SDR_CONFIG_4x32Mx16
 # else
-#  define SDR_CONFIG_CHIPS	SDR_CONFIG_2x32Mx16;
+#  define SDR_CONFIG_CHIPS	SDR_CONFIG_2x32Mx16
 # endif
 #endif
 
@@ -274,7 +274,7 @@ void __naked __section (.bootstrap) initialize_bootstrap (void)
 
   usleep (1000);		/* Wait for CPU to stabilize SDRAM signals */
 
-  SDR_CONFIG = SDR_CONFIG_CAS3 | SDR_CONFIG_CHIPS;
+  SDR_CONFIG = SDR_CONFIG_RAS3 | SDR_CONFIG_CAS3 | SDR_CONFIG_CHIPS;
   SDR_REFRESH = 0;		/* Disable refresh */
   SDR_IR = SDR_IR_NOP;
   usleep (200);			/* datasheet: maintain 200us of NOP */
